# skuld

./: .dockerignore  .example.env  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
dockerfiles/: Dockerfile.api  Dockerfile.server  Dockerfile.ui
skuld/api/: app.py
skuld/api/model/: adapter.py  router.py  service.py
skuld/server/: Caddyfile
skuld/ui/: app.py  service.py
tests/test_api/: test_router.py
